--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,16 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.10"
 marimo = "^0.2.13"
 pandas = "^2.0.0"
 numpy = "^1.20.4"
 loguru = "^0.7.2"
 tqdm = "^4.66.4"
+python-telegram-bot = "13.7"
+requests = "^2.32.3"
+pillow = "^10.4.0"
+together = "^1.2.7"
 
 
 [build-system]
